Update the URL to uxap.github.io

--- a/pnr/index.html
+++ b/pnr/index.html
@@ -1,9 +1,9 @@
 <head>
   <meta name = "viewport" content = "width = device-width">
-  <title>Install</title>
+  <title>PhoneNotes Recorder OTA</title>
 </head>
 <body>
 <h1>PhoneNotes Recorder</h1>
-<p class="p1"><span class="s1"><a href="itms-services://?action=download-manifest&amp;url=https://server.touchutility.com/ota/pnr/pnr.plist">Install PhoneNotes Recorder</a></span></p>
+<p class="p1"><span class="s1"><a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/pnr.plist">Install PhoneNotes Recorder</a></span></p>
 </body>
 </html>
