--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 </head>
 <body>
 <h1>PhoneNotes Recorder</h1>
-<p class="p1"><span class="s1"><a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota-pnr/v0.1.0-1.plist">Install PhoneNotes Recorder</a></span></p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota-pnr/v0.1.0-2.plist">Install PhoneNotes Recorder</a>
+  </span>
+</p>
 </body>
 </html>
