--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,7 +6,7 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota-pnr/v0.1.0-2.plist">Install PhoneNotes Recorder</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v0.1.1-1.plist">Install v0.1.1-1</a>
   </span>
 </p>
 </body>
