--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,7 +6,7 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v0.8.0-1.plist">Install v0.8.0-1</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-4-dev.plist">Install v1.0.0-4 DevBuild</a>
   </span>
 </p>
 </body>
