--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,6 +6,11 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-10.plist">Install v1.0.0-10 Production (Experimental)</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-9-dev.plist">Install v1.0.0-9 DevBuild</a>
   </span>
 </p>
