--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,7 +6,12 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-10.plist">Install v1.0.0-10 Production (Experimental)</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-10.plist">Install v1.0.0-10 Production</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-10-dev.plist">Install v1.0.0-10 DevBuild</a>
   </span>
 </p>
 <p class="p1">
@@ -17,11 +22,6 @@
 <p class="p1">
   <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-8-dev.plist">Install v1.0.0-8 DevBuild</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-7-dev.plist">Install v1.0.0-7 DevBuild</a>
   </span>
 </p>
 </body>
