--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,7 +6,12 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-9-dev.plist">Install v1.0.0-9 DevBuild</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-13.plist">Install v1.0.0-13 Production</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-13-dev.plist">Install v1.0.0-13 DevBuild</a>
   </span>
 </p>
 <p class="p1">
