--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,6 +6,16 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-16.plist">Install v1.0.0-16 Production</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-16-dev.plist">Install v1.0.0-16 DevBuild</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-13.plist">Install v1.0.0-13 Production</a>
   </span>
 </p>
