--- a/pnr/index.html
+++ b/pnr/index.html
@@ -1,17 +1,18 @@
 <head>
   <meta name = "viewport" content = "width = device-width">
+  <link rel="apple-touch-icon" href="20-OTA-120.png">
   <title>PhoneNotes Recorder OTA</title>
 </head>
 <body>
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-18.plist">Install v1.0.0-18 Production</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-19.plist">Install v1.0.0-19 Production</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-18-dev.plist">Install v1.0.0-18 DevBuild</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-19-dev.plist">Install v1.0.0-19 DevBuild</a>
   </span>
 </p>
 <p class="p1">
