--- a/pnr/index.html
+++ b/pnr/index.html
@@ -7,6 +7,11 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-25-dev.plist">Install v1.1.0-25 DevBuild (Pre-release)</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1-24 Production</a>
   </span>
 </p>
