--- a/pnr/index.html
+++ b/pnr/index.html
@@ -12,7 +12,7 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1-24 Production</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1-24 Production (AppStore)</a>
   </span>
 </p>
 <p class="p1">
@@ -32,7 +32,7 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install v1.0.0-20 Production</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install v1.0.0-20 Production (AppStore)</a>
   </span>
 </p>
 <p class="p1">
