Removed unused builds.

--- a/pnr/index.html
+++ b/pnr/index.html
@@ -7,52 +7,27 @@
 <h1>PhoneNotes Recorder</h1>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-26-dev.plist">Install v1.1.0-26 DevBuild (Pre-release)</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-26-dev.plist">Install v1.1.0 (Build 26) DevBuild (Pre-release)</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1-24 Production (AppStore)</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1 (Build 24) Production (AppStore)</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24-dev.plist">Install v1.0.1-24 DevBuild</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24-dev.plist">Install v1.0.1 (Build 24) DevBuild</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-23.plist">Install v1.0.1-23 Production</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install v1.0.0 (Build 20) Production (AppStore)</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-23-dev.plist">Install v1.0.1-23 DevBuild</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install v1.0.0-20 Production (AppStore)</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20-dev.plist">Install v1.0.0-20 DevBuild</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-13.plist">Install v1.0.0-13 Production</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-13-dev.plist">Install v1.0.0-13 DevBuild</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-8-dev.plist">Install v1.0.0-8 DevBuild</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20-dev.plist">Install v1.0.0 (Build 20) DevBuild</a>
   </span>
 </p>
 </body>
