--- a/pnr/index.html
+++ b/pnr/index.html
@@ -5,29 +5,33 @@
 </head>
 <body>
 <h1>PhoneNotes Recorder</h1>
+
+<h3>Pre-release 1.1.0 (Build 26)<h3>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-26-dev.plist">Install v1.1.0 (Build 26) DevBuild (Pre-release)</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-26-dev.plist">Install Dev Version</a>
+  </span>
+</p>
+<h3>AppStore Release 1.0.1 (Build 24)</h3>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install Production Version</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24.plist">Install v1.0.1 (Build 24) Production (AppStore)</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24-dev.plist">Install Dev Version</a>
+  </span>
+</p>
+<h3>AppStore Release 1.0.0 (Build 20)</h3>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install Production Version</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.1-24-dev.plist">Install v1.0.1 (Build 24) DevBuild</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20.plist">Install v1.0.0 (Build 20) Production (AppStore)</a>
-  </span>
-</p>
-<p class="p1">
-  <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20-dev.plist">Install v1.0.0 (Build 20) DevBuild</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.0.0-20-dev.plist">Install Dev Version</a>
   </span>
 </p>
 </body>
