--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>PhoneNotes Recorder</h1>
 
-<h3>Pre-release 1.1.0 (Build 26)<h3>
+<h3>Pre-release 1.1.0 (Build 26)</h3>
 <p class="p1">
   <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.1.0-26-dev.plist">Install Dev Version</a>
