--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,15 +6,15 @@
 <body>
 <h1>PhoneNotes Recorder</h1>
 
-<h3>Pre Release 1.3.0 (Build 37)</h3>
+<h3>AppStore Release 1.3.0 (Build 38)</h3>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.0-37.plist">Install Production Version</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.0-38.plist">Install Production Version</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.0-37-dev.plist">Install Dev Version</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.0-38-dev.plist">Install Dev Version</a>
   </span>
 </p>
 <h3>AppStore Release 1.2.1 (Build 35)</h3>
