--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,6 +6,17 @@
 <body>
 <h1>PhoneNotes Recorder</h1>
 
+<h3>Pre Release 1.3.1 (Build 39)</h3>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.1-39.plist">Install Production Version</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.3.1-39-dev.plist">Install Dev Version</a>
+  </span>
+</p>
 <h3>AppStore Release 1.3.0 (Build 38)</h3>
 <p class="p1">
   <span class="s1">
