--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,6 +6,17 @@
 <body>
 <h1>PhoneNotes Recorder</h1>
 
+<h3>Release 1.4.3 (Build 46)</h3>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.4.3-46.plist">Install Production Version</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.4.3-46-dev.plist">Install Dev Version</a>
+  </span>
+</p>
 <h3>Release 1.4.1 (Build 42)</h3>
 <p class="p1">
   <span class="s1">
@@ -17,7 +28,7 @@
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.4.1-42-dev.plist">Install Dev Version</a>
   </span>
 </p>
-<h3>Release 1.4.1 (Build 41)</h3>
+<h3>Release 1.4.0 (Build 40)</h3>
 <p class="p1">
   <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.4.0-40.plist">Install Production Version</a>
