Inserted ota icon

--- a/onboard/index.html
+++ b/onboard/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta name = "viewport" content = "width = device-width">
-  <link rel="apple-touch-icon" href="20-OTA-120.png">
+  <link rel="apple-touch-icon" href="icon-ota.png">
   <title>Onboard100 OTA</title>
 </head>
 <body>
