--- a/onboard/index.html
+++ b/onboard/index.html
@@ -9,7 +9,7 @@
 <h3>Pre-release 0.0.1 (Build 1)</h3>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.1-1.plist">Install Production Version</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.1-1.plist">Install Development Version</a>
   </span>
 </p>
 </body>
