--- a/onboard/index.html
+++ b/onboard/index.html
@@ -14,7 +14,7 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="https://uxap.github.io/ota/onboard/app-debug.apk">Install Android Development Version</a>
+    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.1-1/app-debug.apk">Install Android Development Version</a>
   </span>
 </p>
 </body>
