Added web app link.

--- a/onboard/index.html
+++ b/onboard/index.html
@@ -9,6 +9,11 @@
 <h3>Pre-release 0.0.2 (Build 2)</h3>
 <p class="p1">
   <span class="s1">
+    <a href="https://dev-app.onboard100.com/">Run web app</a>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
     <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.2-2.plist">Install iOS Development Version</a>
   </span>
 </p>
