--- a/onboard/index.html
+++ b/onboard/index.html
@@ -14,7 +14,12 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.5-5.plist">Install iOS Development Version</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.6-6-manager.plist">Install iOS Manager App</a></br>
+  </span>
+</p>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.6-6-team.plist">Install iOS Team App</a>
   </span>
 </p>
 <p class="p1">
