--- a/onboard/index.html
+++ b/onboard/index.html
@@ -29,7 +29,7 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.7-7/team-debug.apk">Install Android Manager App</a>
+    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.7-7/team-debug.apk">Install Android Team App</a>
   </span>
 </p>
 </body>
