--- a/onboard/index.html
+++ b/onboard/index.html
@@ -6,30 +6,30 @@
 <body>
 <h1>Onboard100</h1>
 
-<h3>Pre-release 0.0.7 (Build 7)</h3>
+<h3>Pre-release 0.0.8 (Build 8)</h3>
 <p class="p1">
   <span class="s1">
-    <a href="https://dev-app.onboard100.com/">Run web app</a>
+    <a href="https://uxap.github.io/Onboard-Website/#">Run web app</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.7-7-manager.plist">Install iOS Manager App</a></br>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.8-8-manager.plist">Install iOS Manager App</a></br>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.7-7-team.plist">Install iOS Team App</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v0.0.8-8-team.plist">Install iOS Team App</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.7-7/manager-debug.apk">Install Android Manager App</a>
+    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.8-8/manager-debug.apk">Install Android Manager App</a>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.7-7/team-debug.apk">Install Android Team App</a>
+    <a href="https://github.com/uxap/ota/releases/download/onboard-0.0.8-8/team-debug.apk">Install Android Team App</a>
   </span>
 </p>
 </body>
