refresh cert and rebuild 45

--- a/onboard/index.html
+++ b/onboard/index.html
@@ -6,7 +6,7 @@
 <body>
 <h1>Onboard100</h1>
 
-<h3>Pre-release 1.0.0 (Build 45)</h3>
+<h3>Pre-release 1.0.0 (Build 45a)</h3>
 <p class="p1">
   <span class="s1">
     <a href="https://uxap.github.io/Onboard-Website/#">Run web app</a>
@@ -14,12 +14,12 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-manager.plist">Install iOS Manager App</a></br>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-manager.45.plist">Install iOS Manager App</a></br>
   </span>
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-team.plist">Install iOS Team App</a>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-team.45.plist">Install iOS Team App</a>
   </span>
 </p>
 <p class="p1">
