manager 3rd attempt

--- a/onboard/index.html
+++ b/onboard/index.html
@@ -14,7 +14,7 @@
 </p>
 <p class="p1">
   <span class="s1">
-    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-manager.45.plist">Install iOS Manager App</a></br>
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/onboard/v1.0.0-45-manager.45a.plist">Install iOS Manager App</a></br>
   </span>
 </p>
 <p class="p1">
