--- a/pnr/index.html
+++ b/pnr/index.html
@@ -6,6 +6,12 @@
 <body>
 <h1>PhoneNotes Recorder</h1>
 
+<h3>Release 1.5.0 (Build 49)</h3>
+<p class="p1">
+  <span class="s1">
+    <a href="itms-services://?action=download-manifest&amp;url=https://uxap.github.io/ota/pnr/v1.5.0-49.plist">Install Production Version</a>
+  </span>
+</p>
 <h3>Release 1.4.4 (Build 47)</h3>
 <p class="p1">
   <span class="s1">
